Refactored to support:
* Ruby 1.9.2 [MRI]
* Heroku
* Sinatra Cache, which uses Rack Cache.
* Syntax highlighting with Ultraviolet. Hyphenated languages fixed, such as 'shell-unix-generic'.
* App as a Sinatra subclass [the "new way" of doing it].
* Different banner image per page. An example of how to add your own custom metadata to the Markdown header.
* Newer HAML gem.
* Newer RedCloth gem.

Turned many double quotes app-wide to single quotes.  Slightly faster.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -17,6 +17,9 @@
       #header
         %p.title= @heading
         %p.subtitle= @subtitle
+        - if @banner_img
+          #banner
+            %img{ :src => @banner_img, :width => "816", :height => "186", :alt => @banner_title, :title => @banner_title }
       = yield
       #footer
         %p
